--- a/3_8_web_crawling.ipynb
+++ b/3_8_web_crawling.ipynb
@@ -144,23 +144,238 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# webdriver 조작을 위해 \n",
+    "from selenium import webdriver\n",
+    "# 키 조작을 위해\n",
+    "from selenium.webdriver.common.keys import Keys\n",
+    "# 페이지 로딩을 기다리기 위해\n",
+    "import time"
+   ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/bg/w2v8q46j0sg8s1v2yx490m6h0000gn/T/ipykernel_16228/3290814528.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "  driver = webdriver.Chrome(\"/opt/homebrew/bin/chromedriver\")\n"
+     ]
+    }
+   ],
    "source": [
-    "### 동적 웹크롤링 - selenium으로 화면 조작하기"
+    "# webdriver 실행\n",
+    "driver = webdriver.Chrome(\"/opt/homebrew/bin/chromedriver\")\n",
+    "# 드라이버에 url 주소 넣고 실행\n",
+    "driver.get(\"https://www.google.co.kr/\")\n",
+    "# 페이지가 완전히 로딩되로록 3초동안 기다림\n",
+    "time.sleep(3)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 동적 웹크롤링 - 텍스트, 하이퍼링크, 이미지 가져오기"
+    "### 동적 웹크롤링 - selenium으로 화면 \n",
+    "원하는 화면 상태에 도달할 수 있도록 웹 브라우저를 조작 가능  \n",
+    "\n",
+    "1. 조작을 원하는 버튼이나 입력창의 html을 파악\n",
+    "2. 아래의 두 함수에 html 정보를 입력해서 객체(버튼/입력창 등) 선택\n",
+    "   1. `find_element_by_css_selector()`\n",
+    "   2. `find_element_by_xpath()`\n",
+    "3. 기능 동작 관련 함수로 원하는 기능 조작\n",
+    "   1. 클릭 : `clik()`\n",
+    "   2. 키 입력 : `send_keys()`\n",
+    "\n",
+    "#### 원하는 버튼의 html 타겟팅\n",
+    "검색 html class -> `class=\"gLFyf gsfi\"`\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 검색어 창을 찾아 search 변수에 저장 (css_selector 이용 방식)\n",
+    "from selenium.webdriver.common.by import By\n",
+    "\n",
+    "search_box = driver.find_element(By.CSS_SELECTOR, \"body > div.L3eUgb > div.o3j99.ikrT4e.om7nvf > form > div:nth-child(1) > div.A8SBwf > div.RNNXgb > div > div.a4bIc > input\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "html에 class나 id가 없어서 타겟팅하기 어려운 경우에는 xpath를 이용\n",
+    "\n",
+    "#### 원하는 조작 수행\n",
+    "![png](https://blog.kakaocdn.net/dn/cClYng/btriB5X449e/eYEVIap9TG3oc1tlQM4zt1/img.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "search_box.send_keys(\"파이썬\")\n",
+    "search_box.send_keys(Keys.RETURN)\n",
+    "time.sleep(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "search_box = driver.find_element(By.CSS_SELECTOR, \"body > div.L3eUgb > div.o3j99.ikrT4e.om7nvf > form > div:nth-child(1) > div.A8SBwf > div.RNNXgb > div > div.a4bIc > input\")\n",
+    "search_box.send_keys(\"클릭\")\n",
+    "\n",
+    "search_botton = driver.find_element(By.CSS_SELECTOR, \"body > div.L3eUgb > div.o3j99.ikrT4e.om7nvf > form > div:nth-child(1) > div.A8SBwf.emcav > div.UUbT9 > div.aajZCb > div.lJ9FBc > center > input.gNO89b\")\n",
+    "search_botton.click()\n",
+    "\n",
+    "time.sleep(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 동적 웹크롤링 - 텍스트, 하이퍼링크, 이미지 가져오기\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/bg/w2v8q46j0sg8s1v2yx490m6h0000gn/T/ipykernel_16228/3499078550.py:11: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "  driver = webdriver.Chrome(\"/opt/homebrew/bin/chromedriver\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.keys import Keys\n",
+    "from selenium.webdriver.common.by import By\n",
+    "import time\n",
+    "\n",
+    "# 검색 키워드 입력\n",
+    "query = input(\"검색할 키워드를 입력하세요: \")\n",
+    "\n",
+    "# 원하는 url로 접속\n",
+    "url = \"https://www.naver.com/\"\n",
+    "driver = webdriver.Chrome(\"/opt/homebrew/bin/chromedriver\")\n",
+    "driver.get(url)\n",
+    "time.sleep(3)\n",
+    "\n",
+    "# 검색창에 키워드 입력 후 엔터\n",
+    "search_box = driver.find_element(By.CSS_SELECTOR, \"input#query\")\n",
+    "search_box.send_keys(query)\n",
+    "search_box.send_keys(Keys.RETURN)\n",
+    "time.sleep(2)\n",
+    "\n",
+    "# 뉴스 탭 클릭\n",
+    "driver.find_element(By.XPATH, '//*[@id=\"lnb\"]/div[1]/div/ul/li[8]/a').click()\n",
+    "time.sleep(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[오늘의 날씨]전국이 맑은 가을 날씨…일교차 유의\n",
+      "[오늘날씨] 아침 최저 0도로 기온 ‘뚝’…전국 대체로 맑음\n",
+      "[오늘날씨] 초겨울태풍 22호·23호 발생 '서울날씨' 금요일엔 춥다\n",
+      "2일 부산 대체로 맑은 날씨…낮기온 23도\n",
+      "전국 맑은 가을 날씨… 낮 최고기온 16∼23도\n",
+      "[내일날씨] 오후부터 기온 '뚝'…건조·강풍에 '화재조심'\n",
+      "[지수로 보는 날씨정보] 올해 마지막 “붉은 달 뜬다”\n",
+      "[날씨] 전국 맑고 큰 일교차…남부 미세먼지\n",
+      "LF 닥스, 추워진 날씨에 퀼팅 아우터 매출 전년 대비 2배↑\n",
+      "건조한 날씨…광주·전남서 산불·들불 잇달아(종합)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 뉴스 제목 텍스트 추출\n",
+    "news_titles = driver.find_elements(By.CSS_SELECTOR, \".news_tit\")\n",
+    "\n",
+    "for i in news_titles:\n",
+    "    title = i.text\n",
+    "    print(title)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.sedaily.com/NewsView/26DGX8ZQ6R\n",
+      "http://www.segye.com/content/html/2022/11/02/20221102502310.html?OutUrl=naver\n",
+      "https://www.gukjenews.com/news/articleView.html?idxno=2583590\n",
+      "https://www.nocutnews.co.kr/news/5842564\n",
+      "https://biz.chosun.com/topics/topics_social/2022/11/02/QUSP44JWXJAQ7OFAJJJZLAQVGE/?utm_source=naver&utm_medium=original&utm_campaign=biz\n",
+      "https://www.news1.kr/articles/4851393\n",
+      "https://www.cjb.co.kr/home/sub.php?menukey=61&mod=view&P_NO=221102501&PRO_CODE=99\n",
+      "http://www.joseilbo.com/news/news_read.php?uid=470074&class=33&grp=\n",
+      "http://news.mt.co.kr/mtview.php?no=2022110210030792799\n",
+      "https://www.yna.co.kr/view/AKR20221102117851054?input=1195m\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 링크 추출\n",
+    "for i in news_titles:\n",
+    "    href = i.get_attribute(\"href\")\n",
+    "    print(href)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 이미지 추출\n",
+    "news_thumbnail = driver.find_elements(By.CSS_SELECTOR, \"img.thumb.api_get\")\n",
+    "link_thumbnail = []\n",
+    "\n",
+    "for img in news_thumbnail:\n",
+    "    link_thumbnail.append(img.get_attribute(\"src\"))\n",
+    "\n",
+    "# 이미지 저장할 폴더 생성    \n",
+    "import os\n",
+    "if not os.path.isdir(\"./img_download\"): os.mkdir(\"./img_download\")\n",
+    "\n",
+    "# 이미지 다운로드\n",
+    "from urllib.request import urlretrieve\n",
+    "i =0\n",
+    "for link in link_thumbnail:\n",
+    "    i += 1\n",
+    "    urlretrieve(link, \"./img_download\"+f\"{i}.jpg\")"
    ]
   }
  ],
@@ -171,7 +386,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.13"
   },
   "orig_nbformat": 4,
